--- a/flaskDemo/templates/assign.html
+++ b/flaskDemo/templates/assign.html
@@ -4,7 +4,9 @@
 <!--    <img class="rounded-circle article-img" src="{{ url_for('static', filename='profile_pics/default.jpg')}}"> -->
     <div class="media-body">
       <div class="article-metadata">
-        <a class="mr-2" href="#">{{ assign }}</a>
+        SSN: <span>{{ assign.essn }}</span><br>
+        PNO: <span>{{ assign.pno }}</span><br>
+        Hours: <span>{{ assign.hours }}</span><br>
         <small class="text-muted">{{now.strftime('%A %B, %d %Y %H:%M:%S')}}</small>
 
           <div>
@@ -21,7 +23,7 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="deleteModalLabel">Delete Department?</h5>
+          <h5 class="modal-title" id="deleteModalLabel">Delete Project Assignment?</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
