--- a/flaskDemo/templates/layout.html
+++ b/flaskDemo/templates/layout.html
@@ -32,7 +32,8 @@
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
               {% if current_user.is_authenticated %}
-                <a class="nav-item nav-link" href="{{ url_for('employees') }}">Employees</a>
+                <a class="nav-item nav-link" href="{{ url_for('employees') }}">Enrollments</a>
+                <a class="nav-item nav-link" href="{{ url_for('projects') }}">Projects</a>
                 <a class="nav-item nav-link" href="{{ url_for('new_dept') }}">New Dept</a>
                 <a class="nav-item nav-link" href="{{ url_for('account') }}">Account</a>
                 <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
