--- a/flaskDemo/templates/layout.html
+++ b/flaskDemo/templates/layout.html
@@ -32,7 +32,8 @@
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
               {% if current_user.is_authenticated %}
-                <a class="nav-item nav-link" href="{{ url_for('all_products') }}">Products</a>
+{#                <a class="nav-item nav-link" href="{{ url_for('all_products') }}">Products</a>#}
+                <a class="nav-item nav-link" href="{{ url_for('all_orders') }}">Orders</a>
 {#                <a class="nav-item nav-link" href="{{ url_for('projects') }}">Projects</a>#}
 {#                <a class="nav-item nav-link" href="{{ url_for('new_dept') }}">New Dept</a>#}
                 <a class="nav-item nav-link" href="{{ url_for('account') }}">Account</a>
