--- a/flaskDemo/templates/orders.html
+++ b/flaskDemo/templates/orders.html
@@ -4,7 +4,7 @@
         <article class="media content-section">
             <div class="media-body">
                 <div class="article-metadata">
-                    <a class="mr-2" href="#">{{ row }}</a> <br/>
+                    <a class="mr-2" href="{{ url_for('order', orderId=row.id) }}">{{ row }}</a> <br/>
                 </div>
             </div>
         </article>
