--- a/flaskDemo/templates/layout.html
+++ b/flaskDemo/templates/layout.html
@@ -33,6 +33,7 @@
             <div class="navbar-nav">
               {% if current_user.is_authenticated %}
 {#                <a class="nav-item nav-link" href="{{ url_for('all_products') }}">Products</a>#}
+                <a class="nav-item nav-link" href="{{ url_for('all_shopcarts') }}">Shopping Cart</a>
                 <a class="nav-item nav-link" href="{{ url_for('all_orders') }}">Orders</a>
 {#                <a class="nav-item nav-link" href="{{ url_for('projects') }}">Projects</a>#}
 {#                <a class="nav-item nav-link" href="{{ url_for('new_dept') }}">New Dept</a>#}
