--- a/flaskDemo/templates/order.html
+++ b/flaskDemo/templates/order.html
@@ -12,7 +12,7 @@
    {% for row in order %}
         <article class="media content-section">
             <div class="media-body">
-                <div class="article-metadata">
+                <div class="">
                     Product: {{ row.title }}
 {#                    <a class="mr-2" href="{{ url_for('order', orderId=row.id) }}">{{ row }}</a> <br/>#}
                 </div>
