front end updates

--- a/flaskDemo/templates/products.html
+++ b/flaskDemo/templates/products.html
@@ -4,7 +4,7 @@
         <article class="media content-section">
             <div class="media-body" style="width: 100%">
                 <div class="" >
-                    <span class="mr-2" href="#">{{ row.title }}</span><a class="btn btn-secondary btn-sm mt-1 mb-1 " style="float:right;" href="{{ url_for('addToCart', pno=row.id) }}">Add to Cart</a> <br/>
+                    <span class="mr-2" href="#">{{ row.title }}</span><a class="btn btn-info btn-sm mt-1 mb-1 " style="float:right;" href="{{ url_for('addToCart', pno=row.id) }}">Add to Cart</a> <br/>
                 </div>
             </div>
         </article>
