--- a/flaskDemo/templates/shopcart.html
+++ b/flaskDemo/templates/shopcart.html
@@ -25,6 +25,6 @@
 
 
 
-    <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('checkout', shopcartId=shoppingCart.id) }}">Checkout</a>
+    <a class="btn btn-info btn-sm mt-1 mb-1" href="{{ url_for('checkout', shopcartId=shoppingCart.id) }}">Checkout</a>
 {% endblock content %}
 
