--- a/flaskDemo/templates/products.html
+++ b/flaskDemo/templates/products.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
+    <h1 style="margin:2% 0 5% ;">Products</h1>
     {% for row in products %}
         <article class="media content-section">
             <div class="media-body" style="width: 100%">
