--- a/flaskDemo/templates/shopcart.html
+++ b/flaskDemo/templates/shopcart.html
@@ -8,7 +8,11 @@
 
 </body>
 </html>{% extends "layout.html" %}
+
 {% block content %}
+
+    <h1 style="margin:2% 0 5% ;">Shopping Cart</h1>
+
     {% for row in shopcartProds %}
         <article class="media content-section">
             <div class="media-body">
