--- a/flaskDemo/templates/shopcart.html
+++ b/flaskDemo/templates/shopcart.html
@@ -26,7 +26,7 @@
         </div>
     {% endfor %}
 
-    {% if shopcartProds.count() == 0 %}
+    {% if count == 0 %}
         <span>Add a product to your cart!</span>
 
         {% else %}
